<resources>
    <string name="app_name">James App</string>
    <string name="sign">Sign In</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="title_activity_maps">Map</string>
    <string name="midium">Midium</string>
    <string name="small">Small</string>
    <string name="large">large</string>
    <string name="package_size">Package Size</string>
    <string name="pickupTime">Pickup Time</string>
    <string name="now">Now</string>
    <string name="today">Today at:</string>
    <string name="ok">ok</string>
    <string name="title_activity_login">James App Sign in</string>
    <string name="skip">SKIP</string>
    <string name="register">register</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmP">Password Confirm</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
