<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.jamesapp.android.RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <EditText
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent"
                >
            </EditText>
            <EditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                >
            </EditText>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_height="wrap_content"
                android:hint="@string/confirmP"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                >
            </EditText>
            <EditText
                android:id="@+id/fname"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                >
            </EditText>
            <EditText
                android:id="@+id/lname"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                >
            </EditText>
            <Button
                android:id="@+id/register"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/register"
               />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
